--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,29 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>goit-js-hw-11-timer</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+            crossorigin="anonymous"
+        />
+
+        <title>goit-js-hw-12-countries</title>
     </head>
 
     <body>
-        <div class="timer" id="timer-1"></div>
+        <div class="container-sm">
+            <input
+                class="form-control form-control-lg search"
+                type="text"
+                aria-label=".form-control-lg example"
+                name="query"
+                id="searchCountry"
+                placeholder="enter the country name"
+                autocomplete="off"
+            />
+        </div>
+
+        <div class="container-sm countrys" id="container"></div>
     </body>
 </html>
